--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
-Flask
-gunicorn
-python-dotenv
-requests
-openai
-plotly
-numpy
-pandas
-scikit-learn
-matplotlib
-seaborn
+Flask==3.1.1
+gunicorn==23.0.0
+plotly==6.1.2
+openai==1.82.1
+pandas==2.2.3
+seaborn==0.13.2
+numpy==2.2.6
+scikit-learn==1.6.1
+scipy==1.15.3
+matplotlib==3.10.3
+python-dotenv==1.1.0
+requests==2.32.3
+httpx==0.28.1
+pydantic==2.11.5
+jinja2==3.1.6
+werkzeug==3.1.3
+tqdm==4.67.1
+typing-extensions==4.13.2
